{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 39,
  "lineage": "f4578db7-32cf-7f28-d0a9-c1a4884e9b96",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "by_public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e1a3833a653a2dbd",
            "domain": "vpc",
            "id": "eipalloc-03f6dc71986db42ba",
            "instance_id": "i-036bfdc909db5785c",
            "network_interface_id": "eni-06887b953cb54602d",
            "network_interface_owner_id": "476561027603",
            "private_dns": "ip-50-10-96-215.eu-west-1.compute.internal",
            "private_ip": "50.10.96.215",
            "public_dns": "ec2-54-154-167-140.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.154.167.140",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "km-devops-sabiha"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:476561027603:internet-gateway/igw-036d7824109fc2b16",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-005e78293bf3c2b77"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-005e78293bf3c2b77"
                ]
              }
            ],
            "id": "igw-036d7824109fc2b16",
            "internet_gateway_id": "igw-036d7824109fc2b16",
            "owner_id": "476561027603"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:476561027603:vpc/vpc-005e78293bf3c2b77",
            "cidr_block": "50.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-007178879b87f5221",
                "cidr_block": "50.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-091084c0222bc7681",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "km-devops-vpc-terraform"
                ]
              }
            ],
            "id": "vpc-005e78293bf3c2b77",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0473815d3e7ed9804",
            "owner_id": "476561027603",
            "tags": {
              "Name": "km-devops-vpc-terraform"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-amar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a3c97561e0b69",
            "arn": "arn:aws:ec2:eu-west-1:476561027603:instance/i-036bfdc909db5785c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-036bfdc909db5785c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06887b953cb54602d",
            "private_dns": "ip-50-10-96-215.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "50.10.96.215",
            "public_ip": "54.154.167.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f7fa87bdb73d1a09",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3a3192c75cb3245",
            "tags": {
              "Name": "ec2_public_terraform_amar_henni"
            },
            "tags_all": {
              "Name": "ec2_public_terraform_amar_henni"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0671a1bc4cf2d65d9"
            ]
          },
          "dependencies": [
            "aws_security_group.security_groupe_public",
            "aws_subnet.test_terraform_subnet_public_amar_henni",
            "data.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table_amar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:476561027603:route-table/rtb-0af0e3fc384709f54",
            "id": "rtb-0af0e3fc384709f54",
            "owner_id": "476561027603",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-036d7824109fc2b16",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table_amar"
            },
            "tags_all": {
              "Name": "public_route_table_amar"
            },
            "timeouts": null,
            "vpc_id": "vpc-005e78293bf3c2b77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_internet_gateway.gateway",
            "data.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05525d36df8dab787",
            "route_table_id": "rtb-0af0e3fc384709f54",
            "subnet_id": "subnet-0a3a3192c75cb3245"
          },
          "dependencies": [
            "aws_route_table.public_route_table_amar",
            "aws_subnet.test_terraform_subnet_public_amar_henni",
            "data.aws_internet_gateway.gateway",
            "data.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_groupe_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:476561027603:security-group/sg-0671a1bc4cf2d65d9",
            "description": "Security group for public EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0671a1bc4cf2d65d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security_groupe_public_amar_henni",
            "name_prefix": "",
            "owner_id": "476561027603",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_security_group"
            },
            "tags_all": {
              "Name": "public_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-005e78293bf3c2b77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_terraform_subnet_public_amar_henni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:476561027603:subnet/subnet-0a3a3192c75cb3245",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "50.10.96.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3a3192c75cb3245",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476561027603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_terraform_amar_henni"
            },
            "tags_all": {
              "Name": "subnet_terraform_amar_henni"
            },
            "vpc_id": "vpc-005e78293bf3c2b77"
          },
          "dependencies": [
            "data.aws_vpc.vpc_terraform"
          ]
        }
      ]
    }
  ]
}